--- a/nvme_ol_82.adoc
+++ b/nvme_ol_82.adoc
@@ -22,7 +22,7 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 == Known limitations
 
-There are no known limitations.
+SAN booting using the NVMe-oF protocol is currently not supported.
 
 == Enable NVMe/FC
 
