--- a/nvme_sles15_sp3.adoc
+++ b/nvme_sles15_sp3.adoc
@@ -27,7 +27,7 @@ Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability M
 
 ==	Known limitations
 
-There are no known limitations.
+SAN booting using the NVMe-oF protocol is currently not supported.
 
 == Enable in-kernel NVMe Multipath
 
