--- a/nvme_ol_84.adoc
+++ b/nvme_ol_84.adoc
@@ -34,7 +34,7 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 == Known limitations
 
-There are no known limitations.
+SAN booting using the NVMe-oF protocol is currently not supported.
 
 == Configuration requirements
 
