--- a/nvme_ol_90.adoc
+++ b/nvme_ol_90.adoc
@@ -25,7 +25,7 @@ For additional details on supported configurations, see the link:https://mysuppo
 
 == Known limitations
 
-There are no known limitations.
+SAN booting using the NVMe-oF protocol is currently not supported.
  
 == Validate software versions
 
