--- a/nvme_ol_92.adoc
+++ b/nvme_ol_92.adoc
@@ -31,7 +31,7 @@ For additional details on supported configurations, see the link:https://mysuppo
 
 == Known limitations
 
-There are no known limitations.
+SAN booting using the NVMe-oF protocol is currently not supported.
  
 == Validate software versions
 
