--- a/nvme_rhel_82.adoc
+++ b/nvme_rhel_82.adoc
@@ -14,7 +14,7 @@ summary: How to Configure NVMe/FC Host for RHEL 8.2 with ONTAP
 :linkattrs:
 :imagesdir: ./media/
 
-== Supportability
+[.lead]
 
 NVMe/FC is supported on ONTAP 9.6 or later for RHEL 8.2. The RHEL 8.2 host runs both NVMe and SCSI traffic through the same fibre channel (FC) initiator adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers. For the most current list of supported configurations and versions, see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
 
@@ -22,7 +22,9 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 == Known limitations
 
-For RHEL 8.2, in-kernel NVMe multipath remains disabled by default. Therefore, you need to enable it manually. Steps for doing so are provided in the next section, "Enabling NVMe/FC on RHEL 8.2".
+* For RHEL 8.2, in-kernel NVMe multipath remains disabled by default. Therefore, you need to enable it manually. 
+
+* SAN booting using the NVMe-oF protocol is currently not supported.
 
 == Enable NVMe/FC on RHEL 8.2
 
