--- a/nvme_rhel_87.adoc
+++ b/nvme_rhel_87.adoc
@@ -31,6 +31,8 @@ RHEL 8.7 includes support for NVMe/TCP (as a Technology Preview feature) in addi
 
 * NVMe/TCP on RHEL 8.7 remains a Technology Preview feature due to open issues. Refer to the link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html/8.7_release_notes/index[RHEL 8.7 release notes^] for details. 
 
+* SAN booting using the NVMe-oF protocol is currently not supported.
+
 
 == Configuration requirements
 
