--- a/nvme_rhel_90.adoc
+++ b/nvme_rhel_90.adoc
@@ -28,7 +28,7 @@ Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability M
 
 ==  Known limitations
 
-There are no known limitations.
+SAN booting using the NVMe-oF protocol is currently not supported.
 
 
 == Enable in-kernel NVMe Multipath
