--- a/_include/hu/reuse_hu_installing_luhu.adoc
+++ b/_include/hu/reuse_hu_installing_luhu.adoc
@@ -1,4 +1,4 @@
-The NetApp Linux Unified Host Utilities software package is available on the link:https://mysupport.netapp.com/NOW/cgi-bin/software/?product=Host+Utilities+-+SAN&platform=Linux[NetApp Support Site^] in a 32-bit or 64-bit .rpm file.
+The NetApp Linux Unified Host Utilities software package is available on the https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] in a 32-bit or 64-bit .rpm file.
 
 NetApp strongly recommends installing the Linux Unified Host Utilities, but it is not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration.
 
@@ -10,7 +10,7 @@ NetApp strongly recommends installing the Linux Unified Host Utilities, but it i
 +
 For older versions of Linux Host Utilities, go to the directory where the host utility software is installed and enter the `uninstall` command.
 
-.	Download the either the 32-bit or 64-bit Linux Unified Host Utilities software package from the link:https://mysupport.netapp.com/NOW/cgi-bin/software/?product=Host+Utilities+-+SAN&platform=Linux[NetApp Support Site^] to your host.
+.	Download the either the 32-bit or 64-bit Linux Unified Host Utilities software package from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] to your host.
 
 .	Go to the directory to which you downloaded the software package and use the following command to install it:
 +
