--- a/_include/hu/reuse_hu_installing_luhu_with32.adoc
+++ b/_include/hu/reuse_hu_installing_luhu_with32.adoc
@@ -1,4 +1,4 @@
-The NetApp Linux Unified Host Utilities software package is available on the link:https://mysupport.netapp.com/NOW/cgi-bin/software/?product=Host+Utilities+-+SAN&platform=Linux[NetApp Support Site^] in a 32-bit and 64-bit .rpm file. If you do not know which file is right for your configuration, use the link:https://mysupport.netapp.com/matrix/#welcome[NetApp Interoperability Matrix Tool^] to verify which one you need.
+The NetApp Linux Unified Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] in a 32-bit and 64-bit .rpm file. If you do not know which file is right for your configuration, use the link:https://mysupport.netapp.com/matrix/#welcome[NetApp Interoperability Matrix Tool^] to verify which one you need.
 
 NetApp strongly recommends installing the Linux Unified Host Utilities, but it is not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration.
 
@@ -6,7 +6,7 @@ NetApp strongly recommends installing the Linux Unified Host Utilities, but it i
 
 If you have a version of Linux Unified Host Utilities currently installed you should upgrade it or, you should remove it and use the following steps to install the latest version.
 
-.	Download the 32-bit or 64-bit Linux Unified Host Utilities software package from the link:https://mysupport.netapp.com/NOW/cgi-bin/software/?product=Host+Utilities+-+SAN&platform=Linux[NetApp Support Site^] Site to your host.
+.	Download the 32-bit or 64-bit Linux Unified Host Utilities software package from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] Site to your host.
 .	Use the following command to install the software package:
 +
 `rpm -ivh netapp_linux_unified_host_utilities-7-1.x86_64`
