--- a/_include/hu/reuse_hu_installing_luhu_without32.adoc
+++ b/_include/hu/reuse_hu_installing_luhu_without32.adoc
@@ -1,4 +1,4 @@
-The NetApp Linux Unified Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab[NetApp Support Site^] in a 64-bit .rpm file.
+The NetApp Linux Unified Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] in a 64-bit .rpm file.
 
 NetApp strongly recommends installing the Linux Unified Host Utilities, but it is not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration.
 
@@ -8,7 +8,7 @@ If you have a version of Linux Unified Host Utilities currently installed, you s
 
 .Steps
 
-. Download the 64-bit Linux Unified Host Utilities software package from the https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab[NetApp Support Site^] to your host.
+. Download the 64-bit Linux Unified Host Utilities software package from the https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] to your host.
 
 . Install the software package:
 +
