Link fixes Solaris, HP-UX and AIX

--- a/hu_aix_72.adoc
+++ b/hu_aix_72.adoc
@@ -19,7 +19,7 @@ summary: Describes how to use IBM AIX 7.2 and/or PowerVM VIOS 3.1 with with ONTA
 
 You must install the AIX Host Utilities Kit while using AIX MPIO with NetApp ONTAP storage.
 
-You can download the compressed file containing the Host Utilities software packages from the NetApp Support Site. After you have the file, you must decompress it to get the two software packages you need to install the host utilities.
+You can download the compressed file containing the Host Utilities software packages from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.1/downloads[NetApp Support Site^]. After you have the file, you must decompress it to get the two software packages you need to install the host utilities.
 
 NetApp AIX Host Utilities 6.1 is the latest release. This release addresses the memory leak issue that was reported in the previous releases. Refer to release notes section for additional information.
 
