--- a/hu_aix_71.adoc
+++ b/hu_aix_71.adoc
@@ -17,9 +17,9 @@ summary: Describes how to use IBM AIX 7.1 with ONTAP
 
 == Install the AIX Host Utilities
 
-You must install the AIX Host Utilities Kit while using AIX MPIO with NetApp ONTAP Storage.
+You must install the AIX Host Utilities Kit while using AIX MPIO with NetApp ONTAP storage.
 
-You can download the compressed file containing the Host Utilities software packages from the NetApp Support Site. After you have the file, you must extract it to get the two software packages you need to install the Host Utilities.
+You can download the compressed file containing the Host Utilities software packages from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.1/downloads[NetApp Support Site^]. After you have the file, you must extract it to get the two software packages you need to install the Host Utilities.
 
 .Steps
 
