--- a/hu_solaris_113.adoc
+++ b/hu_solaris_113.adoc
@@ -17,11 +17,11 @@ summary: Describes how to install the solaris host utilities
 
 == Install the Solaris Host Utilities
 
-You can download the compressed file containing the Host Utilities software packages from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab[NetApp Support Site^]. After you have the file, you must extract it to get the software packages you need to install the Host Utilities.
+You can download the compressed file containing the Host Utilities software packages from the https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.2/downloads[NetApp Support Site^]. After you have the file, you must extract it to get the software packages you need to install the Host Utilities.
 
 .Steps
 
-.	Download a copy of the compressed file containing the Host Utilities from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab[NetApp Support Site^] to a directory on your host.
+.	Download a copy of the compressed file containing the Host Utilities from the https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.2/downloads[NetApp Support Site^] to a directory on your host.
 
 . Go to the directory containing the download.
 
