--- a/hu_solaris_62.adoc
+++ b/hu_solaris_62.adoc
@@ -40,7 +40,8 @@ The NetApp Solaris Host Utilities software package is available on the link:http
 .Steps
 
 . Login to your host as root.
-. Download a copy of the compressed file containing the Host Utilities from link:https://mysupport.netapp.com/site/[NetApp Support Site^] to a directory on your host.
+
+. Download a copy of the compressed file containing the Host Utilities from link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.2/downloads[NetApp Support Site^] to a directory on your host.
 +
 At the time this documentation was prepared, the compressed files were called:
 +
@@ -48,7 +49,8 @@ At the time this documentation was prepared, the compressed files were called:
 * x86/x64 CPU: `netapp_solaris_host_utilities_6_2_amd.tar.gz`
 
 . Go to the directory containing the download.
-. Unzip the file using the gunzip command
+
+. Unzip the file using the gunzip command:
 +
 `# gunzip netapp_solaris_host_utilities_6_2_sparc.tar.gz`
 
@@ -87,7 +89,7 @@ drwxr-xr-x   3 root     sys            4 Jul 22  2019 ..
 -r-xr-xr-x   1 root     sys         9044 Sep 13  2017 sanlun.1
 ----
 
-. After you finish, you must configure the host parameters for your environment using `/opt/NTAP/SANToolkit/bin/host_config` command:
+. After you finish, you must configure the host parameters for your environment using the `/opt/NTAP/SANToolkit/bin/host_config` command:
 +
 ** MPxIO
 ** Veritas DMP
@@ -119,7 +121,5 @@ data_vserver                     /vol/vol3/lun4     /dev/rdsk/c0t600A09803830443
 [NOTE]
 This toolkit is common across all configurations and protocols of the Host Utilities. As a result, some of its contents apply to one configuration, but not another. Having unused components does not affect your system performance.
 
-== Command reference 
 
-Refer to the link:hu_solaris_62_cmd.html[sample command reference] for an end-to-end validation of your storage configuration.
 
