--- a/hu_solaris_62.adoc
+++ b/hu_solaris_62.adoc
@@ -15,9 +15,9 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-The Solaris Utilities enable you to connect a Solaris host to the NetApp storage.
+The Solaris Unified Host Utilities assists you to manage NetApp ONTAP storage attached to a Solaris host.
 
-The primary host utilities environments are: 
+The Solaris Host Utilities 6.2 supports several Solaris environments and multiple protocols. The primary host utilities environments are: 
 
 * Native OS with MPxIO with either the Fibre Channel (FC) or iSCSI protocol on a system using either a SPARC processor or an x86/64 processor.
 * Veritas Dynamic Multipathing (DMP) with either the FC or iSCSI protocol on a system using a SPARC processor and with the iSCSI protocol on system using an x86/64 processor.
@@ -35,7 +35,7 @@ You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=7110
 
 
 [NOTE]
-The NetApp Solaris Host Utilities software package is available on the link:https://mysupport.netapp.com/site/[NetApp Support Site^] in a compressed  file format for your processor. You can download the Host Utilities software package for your environment from the Support site.
+The NetApp Solaris Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.2/downloads[NetApp Support Site^] in a compressed  file format for your processor. You can download the Host Utilities software package for your environment from the Support site.
 
 .Steps
 
