--- a/hu_solaris_62_cmd.adoc
+++ b/hu_solaris_62_cmd.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 ---
 
-= Solaris 6.2 command reference 
+= Solaris Host Utilities 6.2 command reference 
 :toc: macro
 :hardbreaks:
 :toclevels: 1
