--- a/nvme_sles15_sp4.adoc
+++ b/nvme_sles15_sp4.adoc
@@ -246,7 +246,7 @@ nvme discover -t tcp -w host-traddr  -a traddr
 # nvme discover -t tcp -w 192.168.2.5 -a 192.168.2.37
 ----
 
-. Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes, and set the controller loss timeout period for at least 30 minutes or 1800 seconds:
+. Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes, and set the controller loss timeout period:
 +
 ----
 nvme connect-all -t tcp -w host-traddr -a traddr -l ctrl_loss_timeout_in_seconds
@@ -255,12 +255,14 @@ nvme connect-all -t tcp -w host-traddr -a traddr -l ctrl_loss_timeout_in_seconds
 *Example output*
 +
 ----
-# nvme connect-all -t tcp -w 192.168.1.4 -a 192.168.1.31 -l 1800
-# nvme connect-all -t tcp -w 192.168.1.4 -a 192.168.1.32 -l 1800
-# nvme connect-all -t tcp -w 192.168.2.5 -a 192.168.1.36 -l 1800
-# nvme connect-all -t tcp -w 192.168.2.5 -a 192.168.1.37 -l 1800
+# nvme connect-all -t tcp -w 192.168.1.4 -a 192.168.1.31 -l -1
+# nvme connect-all -t tcp -w 192.168.1.4 -a 192.168.1.32 -l -1
+# nvme connect-all -t tcp -w 192.168.2.5 -a 192.168.1.36 -l -1
+# nvme connect-all -t tcp -w 192.168.2.5 -a 192.168.1.37 -l -1
 ----
-
++
+[NOTE]
+NetApp recommends setting the `ctrl-loss-tmo` option with an indefinite value (such as -1) so that the NVMe subsystem keeps trying to reconnect in the event of a path loss. 
 
 == Validate NVMe-oF
 
@@ -511,7 +513,7 @@ Vserver UUID: 48391d66-c0a6-11ec-aaa5-d039ea165514
 
 == Set up secure in-band authentication
 
-Beginning with ONTAP 9.12.1 and later, secure, in-band authentication is supported over NVMe/TCP between your SLES 15 SP4 host and your ONTAP controller.
+Beginning with ONTAP 9.12.1 and later, secure, in-band authentication is supported over NVMe/TCP and NVMe/FC between your SLES 15 SP4 host and your ONTAP controller.
 
 To set up secure authentication, each host or controller must be associated with a `DH-HMAC-CHAP` key which is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. In order for an NVMe host or controller to authenticate its peer, it must recognize the key associated with the peer. 
 
