--- a/nvme_sles15_sp4.adoc
+++ b/nvme_sles15_sp4.adoc
@@ -24,7 +24,7 @@ For additional details on supported configurations, see the link:https://mysuppo
 == Features
 
 * Support for NVMe secure, in-band authentication.
-* Support for persistent discovery controllers using a unique discovery NQN.
+* Support for persistent discovery controllers (PDCs) using a unique discovery NQN.
 
 == Known limitations
 
@@ -262,7 +262,7 @@ nvme connect-all -t tcp -w host-traddr -a traddr -l ctrl_loss_timeout_in_seconds
 ----
 +
 [NOTE]
-NetApp recommends setting the `ctrl-loss-tmo` option with an indefinite value (such as -1) so that an NVMe subsystem continues trying to reconnect in the event of a path loss. 
+NetApp recommends setting the `ctrl-loss-tmo` option with an indefinite value (such as -1) so that an NVMe subsystem continues to try reconnecting in the event of a path loss. 
 
 == Validate NVMe-oF
 
@@ -409,7 +409,7 @@ Example output:
 
 == Discovery enhancements
 
-Beginning with ONTAP 9.11.1, you create a persistent discovery controller for your SLES 15 SP4 host.
+Beginning with ONTAP 9.11.1, you can create a persistent discovery controller for your SLES 15 SP4 host.
 
 .Steps
 
@@ -478,13 +478,13 @@ trsvcid: 4420 subnqn: nqn.1992-
 traddr: 192.168.1.116 eflags: not specified sectype: none
 ----
 
-. Create a Persistent Discovery Controller (PDC) connection to the discovery subsystem:
+. Create a persistent discovery controller (PDC) connection to the discovery subsystem:
 +
 ----
 nvme discover -t tcp -w host-traddr -a traddr -p
 ----
 +
-*Example output:*
+*Example*
 +
 ----
 nvme discover -t tcp -w 192.168.1.16 -a 192.168.1.116 -p
@@ -493,7 +493,7 @@ nvme discover -t tcp -w 192.168.1.16 -a 192.168.1.116 -p
 . From the ONTAP controller, validate that the PDC is created:
 +
 ----
-vserver nvme show-discovery-controller -instance -vserver vserer_name
+vserver nvme show-discovery-controller -instance -vserver vserver_name
 ----
 +
 *Example output:*
@@ -571,9 +571,10 @@ nvme connect -t tcp -w ip_address -a ip_address -n host_nqn -S authentication_ho
 
 . Validate the `nvme connect authentication` command by verifying the host and controller dhchap keys: 
 +
+*Verify the host dhchap keys*
++
 ----
 $cat /sys/class/nvme-subsystem/<nvme-subsysX>/nvme*/dhchap_secret
-$cat /sys/class/nvme-subsystem/<nvme-subsysX>/nvme*/dhchap_ctrl_secret
 ----
 +
 *Example output for unidirectional configuration:*
@@ -590,6 +591,12 @@ none
 none
 none
 SR650-14-114:~ #
+----
++
+*Verify the controller dhchap keys*
++
+----
+$cat /sys/class/nvme-subsystem/<nvme-subsysX>/nvme*/dhchap_ctrl_secret
 ----
 +
 *Example output for bidirectional configuration:*
@@ -671,7 +678,6 @@ Note that `dhchap_key` corresponds to `dhchap_secret` and `dhchap_ctrl_key` corr
 
 . Connect to the ONTAP controller using the config JSON file.
 +
-
 ----
 nvme connect-all -J /etc/nvme/config.json
 ----
@@ -695,6 +701,8 @@ traddr=192.168.1.117 is already connected
 
 . Verify that the dhcap secrets have been enabled for the respective controllers for each subsystem:
 +
+*Verify the host dhchap keys*
++
 ----
 # cat /sys/class/nvme-subsystem/nvme-subsys0/nvme0/dhchap_secret
 ----
@@ -704,6 +712,8 @@ traddr=192.168.1.117 is already connected
 ----
 DHHC-1:01:NunEWY7AZlXqxITGheByarwZdQvU4ebZg9HOjIr6nOHEkxJg:
 ----
++
+*Verify the controller dhchap keys*
 +
 ----
 # cat /sys/class/nvme-subsystem/nvme-subsys0/nvme0/dhchap_ctrl_secret
