--- a/hu_hpux_60_rn.adoc
+++ b/hu_hpux_60_rn.adoc
@@ -15,12 +15,12 @@ summary: Release Notes for HPUX Host Utilities 6.0
 :imagesdir: ./media/
 
 [lead]
-The release notes describe new features and enhancements, issues fixed in the current release, known problems and limitations, and important cautions related to configuring and managing your specific HU-PUX host with your ONTAP storage system.
+The release notes describe new features and enhancements, issues fixed in the current release, known problems and limitations, and important cautions related to configuring and managing your specific HP-UX host with your ONTAP storage system.
 
 The HP-UX Host Utilities 6.0 continues to support versions of the following:
 
 * HP-UX 11iv2
 * HP-UX 11iv3
 
-There are no new features, enhancements, known limitations, or cautions for the HU-PUX host utilities 6.0 release.
+There are no new features, enhancements, known limitations, or cautions for the HP-UX host utilities 6.0 release.
 
